tests/diagnostics/naming/casing/constant_not_upper_snake_case/expect.txt
# exit: 1
lib.coppice:1:1: error: constant name must be UPPER_SNAKE_CASE
  apiVersion: string := "v1"
  ^
